--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,7 @@
 [Master Stylesheet]
 
 Project        :   Noa – Bootstrap  Admin & Dashboard Template
-Copyright      :   Spruko Technologies Private Limited 
+Copyright      :   Spruko Technologies Private Limited
 Author         :   Spruko
 Author URL     :   https://themeforest.net/user/spruko
 Support	       :   support@spruko.com
@@ -19091,6 +19091,9 @@ a.chip:hover {
     .header .header-brand-img.mobile-view-logo {
         display: block !important;
     }
+}
+.app-header.header.sticky{
+    background-color: #13dda1;
 }
 
 .server i {
@@ -49490,7 +49493,7 @@ body.rtl {
 }
 
 /*# sourceMappingURL=bootstrap-datepicker.css.map */
-/*! X-editable - v1.5.1 
+/*! X-editable - v1.5.1
 * In-place editing with Twitter Bootstrap, jQuery UI or pure jQuery
 * http://github.com/vitalets/x-editable
 * Copyright (c) 2013 Vitaliy Potapov; Licensed MIT */
@@ -49512,8 +49515,8 @@ body.rtl {
     width: auto;
 }
 
-/* 
-BS3 width:1005 for inputs breaks editable form in popup 
+/*
+BS3 width:1005 for inputs breaks editable form in popup
 See: https://github.com/vitalets/x-editable/issues/393
 */
 .editable-buttons {
@@ -56179,7 +56182,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 /*
  * bootstrap-tagsinput v0.8.0
- * 
+ *
  */
 .bootstrap-tagsinput {
     background-color: #fff;
@@ -57305,7 +57308,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
  * datepicker_header
 */
 /*
- * datepicker_inner_container 
+ * datepicker_inner_container
 */
 /*
  * datepicker_inner_container > datepicker_calendar
@@ -112001,6 +112004,9 @@ textarea.form-control {
     .wp-sm-max-20 {
         width: 20% !important;
     }
+}
+.app-sidebar.mb-5{
+padding-top: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
